# BasicRender

./: CMakeLists.txt  main.cpp  window.hpp
include/basic_render/: BasicRender.hpp  ElementBuffer.hpp  Shader.hpp  VertexArray.hpp  VertexBuffer.hpp  Window.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/: Default.frag
src/: Main.cpp
